// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test that correct file type upload works (buttonUpload=true, error=str, & file=name) 1`] = `
<div
  className="content-container--subHeader"
>
  <ForwardRef>
    <Card
      body={false}
    >
      <ForwardRef
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "CardHeader",
            "render": [Function],
          }
        }
        className="accordion__header"
        eventKey="0"
      >
        Upload Data
      </ForwardRef>
      <AccordionCollapse
        eventKey="0"
      >
        <CardBody>
          <form
            className="form"
            onSubmit={[Function]}
          >
            <input
              name="file"
              onChange={[Function]}
              type="file"
            />
            <div>
              <button
                className="button"
                disabled={false}
              >
                Upload Data
              </button>
            </div>
          </form>
        </CardBody>
      </AccordionCollapse>
    </Card>
  </ForwardRef>
</div>
`;

exports[`test that incorrect file type generates error message 1`] = `
<div
  className="content-container--subHeader"
>
  <ForwardRef>
    <Card
      body={false}
    >
      <ForwardRef
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "CardHeader",
            "render": [Function],
          }
        }
        className="accordion__header"
        eventKey="0"
      >
        Upload Data
      </ForwardRef>
      <AccordionCollapse
        eventKey="0"
      >
        <CardBody>
          <form
            className="form"
            onSubmit={[Function]}
          >
            <h3
              className="form__error"
            >
              Please upload correct file type
            </h3>
            <input
              name="file"
              onChange={[Function]}
              type="file"
            />
            <div>
              <button
                className="button"
                disabled={true}
              >
                Upload Data
              </button>
            </div>
          </form>
        </CardBody>
      </AccordionCollapse>
    </Card>
  </ForwardRef>
</div>
`;
